Fix up data flow into AceEditor wrapper + fix bug with gap below graph

--- a/front-end/src/styles/app.scss
+++ b/front-end/src/styles/app.scss
@@ -104,7 +104,7 @@ $content-sidebar-width: 92px;
 .view-project-page {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 115px);
+  height: calc(100vh - 85px);
   width: 100%;
 
   .router-link-active {
